--- a/style.css
+++ b/style.css
@@ -29,6 +29,11 @@ nav a {
     
 }
 
+nav a:hover {
+    color: aqua;
+    text-decoration: underline;
+}
+
 .produtos {
     width: 75%;
     margin: 0 auto;
@@ -46,6 +51,18 @@ nav a {
     box-sizing: border-box;
     border:  2px #000000 solid;
     border-radius: 10px;
+}
+
+.produtos li:hover {
+    color: aqua;
+}
+
+.produtos li:active {
+    border-color: #088c19;
+}
+
+.produtos li:hover h2 {
+    font-size: 40px;
 }
 
 .prosutos h2 {
