--- a/style.css
+++ b/style.css
@@ -80,3 +80,15 @@ nav a:hover {
     font-size: 15px;
 
 }
+
+footer {
+    text-align: center;
+    background: url("/images/bg.jpg");
+    padding: 40px 0;
+}
+
+.copyright {
+    color: #FFFFFF;
+    font-size: 13px;
+    margin-top: 20px;
+}
